<resources>
    <string name="app_name">grupo10</string>
    <string name="txt_jugar">PLAY</string>
    <string name="txt_perfil">PROFILE</string>
    <string name="txt_ajustes">CONFIG</string>
    <string name="txt_acercade">ABOUT</string>
    <string name="txt_usuario">USER</string>
    <string name="txt_contrasena">PASSWORD</string>
    <string name="txt_login">SIGN IN</string>
    <string name="txt_registro">SIGN UP</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="categorias">
        <item>Futbol</item>
        <item>Banlocesto</item>
        <item>Natacion</item>
        <item>Beisbol</item>
        <item>Tenis</item>
        <item>Carreras</item>
    </string-array>

</resources>