<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_margin="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img01"
        android:layout_weight="50">

    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_usuario"
        style="@style/MyTextView">

    </TextView>

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_usuario"
        android:layout_weight="10"
        style="@style/MyEditText"
        android:layout_marginBottom="10dp">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contrasena"
        style="@style/MyTextView">

    </TextView>

    <EditText
        android:id="@+id/edt_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_contrasena"
        style="@style/MyEditText"
        android:layout_marginBottom="10dp">

    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:layout_weight="10">

    </Button>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_registro"
        android:layout_weight="10">

    </Button>

</LinearLayout>